# GnHelloWorld

./: .gn  BUILD.gn  CMakeLists.txt  LICENSE  README.md
app/include/: app.h
app/src/: app.c  main.c
src/: BUILD.gn  app.c  hello.c
